--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "sass": "^1.50.0",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.1",
+        "svg-sprite-loader": "^6.0.11",
+        "svgo-loader": "^3.0.0",
         "webpack": "^5.72.0",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.8.1"
